# Aarohan_Backend

./: .env.example  API_DOCUMENTATION.md  AZURE_DEPLOYMENT.md  DEPLOYMENT.md  FRONTEND_API_MAPPING.md  IMPLEMENTATION_COMPLETE.md  Procfile  RENDER_DEPLOYMENT.md  build.sh  db.sqlite3  manage.py  populate_sample_data.py  pyproject.toml  render.yaml  requirements.txt  startup.sh
Aaarohan_Backend/: asgi.py  settings.py  urls.py  wsgi.py
authapp/: models.py  serializers.py  urls.py  views.py
authapp/management/commands/: populate_demo_data.py
authapp/migrations/: 0001_initial.py  0002_badge_user_created_at_user_profile_image_and_more.py  0003_systemsettings_alter_userbadge_unique_together_and_more.py
